--- a/RTK/css/global.css
+++ b/RTK/css/global.css
@@ -24,7 +24,12 @@ ul {
 }
 
 p,
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
@@ -32,15 +37,17 @@ h1,h2,h3,h4,h5,h6 {
 html {
   box-sizing: border-box;
 }
-*, *::before, *::after{
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
-input[type=search] {
+input[type="search"] {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 18px;
   line-height: 1.4;
@@ -358,7 +365,7 @@ main {
   background: var(--gradient-hover);
 }
 .products-list__link::after {
-  content: url('../images/icons/arrow-right.svg');
+  content: url("../images/icons/arrow-right.svg");
   position: absolute;
   right: 15px;
   top: 50%;
@@ -373,7 +380,7 @@ main {
 .main-banner {
   border-radius: 30px;
   border: none;
-  background-image: url('../images/banner/banner-forest.png');
+  background-image: url("../images/banner/banner-forest.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 72px 65px;
@@ -387,7 +394,7 @@ main {
 .promo-banner {
   border-radius: 30px;
   border: none;
-  background-image: url('../images/bg-banner.png');
+  background-image: url("../images/bg-banner.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 68px 30px 68px 28px;
@@ -445,7 +452,7 @@ main {
   font-weight: 400;
   line-height: 32px;
 }
-.promo-banner__input::placeholder{
+.promo-banner__input::placeholder {
   color: var(--text-in-boxes);
 }
 .promo-banner__link {
@@ -460,7 +467,7 @@ main {
   padding: 14px 68px 14px 44px;
 }
 .promo-banner__link::after {
-  content: url('../images/icons/arrow-right.svg');
+  content: url("../images/icons/arrow-right.svg");
   position: absolute;
   right: 55px;
   top: 50%;
@@ -565,8 +572,8 @@ main {
   padding: 11px 15px;
 }
 .section-contacts__form input,
-.section-contacts__form input::placeholder, 
-.section-contacts__form textarea, 
+.section-contacts__form input::placeholder,
+.section-contacts__form textarea,
 .section-contacts__form textarea::placeholder {
   font-family: inherit;
   font-size: 16px;
@@ -597,7 +604,9 @@ main {
 .section-contacts__form-btn:hover {
   background: var(--gradient-1-hover);
 }
-
+.main-banner__title-22 {
+  max-width: 800px;
+}
 @media (max-width: 1200px) {
   .section-contacts__form label {
     width: 100%;
