--- a/RTK/css/index.css
+++ b/RTK/css/index.css
@@ -6,18 +6,20 @@
   padding: 136px var(--padding-page);
 }
 .section-main__inner {
-  max-width: 640px;
+  max-width: 1040px;
 }
 .section-main__title {
   text-align: left;
   color: var(--text-white);
-  margin-bottom: 48px;
+  margin-bottom: 40px;
+  font-size: 44px;
 }
 .section-main__text {
   line-height: 30px;
   color: var(--green-100);
-  margin-bottom: 63px;
+  margin-bottom: 50px;
   padding-right: 65px;
+  font-size: 15px;
 }
 .section-main__link {
   display: inline-block;
@@ -183,7 +185,6 @@
 .card__bottom button:hover {
   background: var(--gradient-1-hover);
 }
-
 
 @media (max-width: 1100px) {
   .section-about__list {
