--- a/RTK/css/index.css
+++ b/RTK/css/index.css
@@ -6,20 +6,18 @@
   padding: 136px var(--padding-page);
 }
 .section-main__inner {
-  max-width: 1040px;
+  max-width: 640px;
 }
 .section-main__title {
   text-align: left;
   color: var(--text-white);
-  margin-bottom: 40px;
-  font-size: 44px;
+  margin-bottom: 48px;
 }
 .section-main__text {
   line-height: 30px;
   color: var(--green-100);
-  margin-bottom: 50px;
+  margin-bottom: 63px;
   padding-right: 65px;
-  font-size: 15px;
 }
 .section-main__link {
   display: inline-block;
@@ -77,6 +75,7 @@
   width: 100%;
   display: flex;
   gap: 30px;
+  align-items: center;
 }
 .section-about__item-icon {
   border-radius: 10px;
@@ -95,7 +94,7 @@
 }
 .section-about__item-title {
   color: var(--text-green);
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
 }
 .section-about__item-text {
   color: var(--text-blue-dark);
@@ -186,6 +185,92 @@
   background: var(--gradient-1-hover);
 }
 
+.products_list-item {
+  background-color: #fff;
+  border-radius: 5px;
+  border-radius: 42px 42px 0 0;
+}
+.products_list-item-top {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    gap: 20px;
+}
+.products_list-item-top-left h2{
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.products_list-item-top-left p{
+  font-size: 14px;
+  color: gray;
+  margin-bottom: 30px;
+}
+.products_list-item-top-left a{
+  font-size: 12px;
+  color: orangered;
+  text-decoration: revert;
+
+}
+.products_list-item-top-rigth img{
+  max-width: 105px;
+}
+.products_list-item-mid {
+  display: flex;
+  margin-bottom: 30px;
+
+}
+.products_list-item-mid-left {
+    border: 1px solid rgba(128, 128, 128, 0.158);
+    border-left: none;
+    border-bottom: none;
+    width: 50%;
+}
+.products_list-item-mid-item {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.158);
+}
+.products_list-item-mid-item img{
+ max-width: 25px;
+ margin-right: 10px;
+}
+.products_list-item-mid-item-text {
+
+}
+.products_list-item-mid-item-text p{
+  font-size: 14px;
+  color: gray;
+}
+.products_list-item-mid-item-text h4{
+  font-size: 14px;
+  font-weight: 400;
+}
+.products_list-item-mid-right {
+  border: 1px solid rgba(128, 128, 128, 0.158);
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+
+  width: 50%;
+}
+.products_list-item-bot button{
+  font-size: 18px;
+  border-radius: 5px;
+  font-weight: 500;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(128, 128, 128, 0.205);
+  padding: 10px;
+  background-color: #fff;
+  max-width: 250px;
+  width: 100%;
+}
 @media (max-width: 1100px) {
   .section-about__list {
     gap: 80px 40px;
