--- a/RTK/css/about.css
+++ b/RTK/css/about.css
@@ -29,6 +29,7 @@
 .section-main__content-image {
   border-radius: 20px;
   width: 29%;
+  height: 150px;
   object-fit: cover;
 }
 .section-main__content-right {
