--- a/RTK/css/about.css
+++ b/RTK/css/about.css
@@ -53,7 +53,94 @@
 .section-products__title {
   margin-bottom: 50px;
 }
+.products_list-item {
+  background-color: #fff;
+  border-radius: 5px;
+  border-radius: 42px 42px 0 0;
+}
+.products_list-item-top {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+.products_list-item-top-left h2{
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.products_list-item-top-left p{
+  font-size: 14px;
+  color: gray;
+  margin-bottom: 30px;
+}
+.products_list-item-top-left a{
+  font-size: 12px;
+  color: orangered;
+  text-decoration: revert;
 
+}
+.products_list-item-top-rigth img{
+  max-width: 105px;
+}
+.products_list-item-mid {
+  display: flex;
+  margin-bottom: 30px;
+
+}
+.products_list-item-mid-left {
+    border: 1px solid rgba(128, 128, 128, 0.158);
+    border-left: none;
+    border-bottom: none;
+    /* width: 50%; */
+    width: 100%;
+}
+.products_list-item-mid-item {
+  display: flex;
+  padding: 10px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.158);
+}
+.products_list-item-mid-item img{
+ max-width: 25px;
+ margin-right: 10px;
+}
+.products_list-item-mid-item-text {
+
+}
+.products_list-item-mid-item-text p{
+  font-size: 14px;
+  color: gray;
+}
+.products_list-item-mid-item-text h4{
+  font-size: 14px;
+  font-weight: 400;
+}
+.products_list-item-mid-right {
+  border: 1px solid rgba(128, 128, 128, 0.158);
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+
+  width: 50%;
+}
+.products_list-item-bot button{
+  font-size: 18px;
+  border-radius: 5px;
+  font-weight: 500;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(128, 128, 128, 0.205);
+  padding: 10px;
+  background-color: #fff;
+  max-width: 250px;
+  width: 100%;
+}
 @media (max-width: 1000px) {
   .section-main__content {
     flex-direction: column;
